tests/error/already_parent.gw
#! [contains] has already been defined in parent class
class C {
  var int i;
}

class CC extends C {
  var int i;
}
